more spacing for the content page footer

--- a/docs/overrides/partials/page_content_footer.html
+++ b/docs/overrides/partials/page_content_footer.html
@@ -1,4 +1,9 @@
 <style>
+
+  hr.footer {
+    margin-top: 5em;
+  }
+
   ul.horizontal {
     display: flex !important;
     justify-content: center;
@@ -12,7 +17,7 @@
     float: left;
   }
 </style>
-<hr />
+<hr class="footer" />
 <small>
     <ul class="horizontal">
       <li>Get Help
